<resources>
    <string name="app_name">GraduationProject</string>

    <string name="order">订单</string>
    <string name="discover">发现</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>

    <string name="advice">意见反馈</string>
    <string name="update">版本更新</string>
    <string name="about">关于我们</string>
    <string name="farmlandinfo">耕地信息</string>
    <string name="addfarmland">新增耕地</string>


    <!-- sign in and sign up -->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="signin">登录</string>
    <string name="signupid">注册账号</string>
    <string name="forgetpassword">忘记密码</string>

    <string name="phonenumber">手机号</string>
    <string name="identifycode">验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="inputnewpassword">输入新密码</string>
    <string name="getpassword">找回密码</string>

    <string name="signup">注册</string>
    <string name="name">姓名</string>

    <string name="copyright">copyright @2016-1026 Huangyupeng All Rights Reserved</string>

    <string name="signout">退出登录</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <string name="item_order_add">发布订单</string>
    <string name="farm_address">耕地地址</string>
    <string name="farm_type">耕地类型</string>
    <string name="farm_square">耕地面积</string>
    <string name="machine_type">农机类型</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>


</resources>
