<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_color_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <View style="@style/line_h_black"
        android:layout_marginTop="@dimen/dimen_20"/>
    <RelativeLayout
        android:id="@+id/choose_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_clickable_item_bg"
        >

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/global_txt"
            android:layout_marginLeft="@dimen/dimen_15"
            android:textSize="@dimen/font_main_big"
            android:layout_centerVertical="true"
            android:text="@string/farm_address"
            />

        <ImageView
            android:id="@+id/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/option_item_padding"
            android:layout_marginTop="@dimen/dimen_15"
            android:layout_marginBottom="@dimen/dimen_15"
            />

        <TextView
            android:id="@+id/current_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/address_title"
            android:layout_toLeftOf="@id/right_arrow"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_main_normal"
            android:layout_marginLeft="@dimen/dimen_10"
            />



    </RelativeLayout>

    <View style="@style/line_h_black"
        android:layout_marginLeft="@dimen/dimen_15"
        />

    <RelativeLayout
        android:id="@+id/farm_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_clickable_item_bg"
        >

        <TextView
            android:id="@+id/type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/global_txt"
            android:layout_marginLeft="@dimen/dimen_15"
            android:textSize="@dimen/font_main_big"
            android:layout_centerVertical="true"
            android:text="@string/farm_type"
            />

        <ImageView
            android:id="@+id/type_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/option_item_padding"
            android:layout_marginTop="@dimen/dimen_15"
            android:layout_marginBottom="@dimen/dimen_15"
            />

        <TextView
            android:id="@+id/current_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/type_title"
            android:layout_toLeftOf="@id/type_right_arrow"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_main_normal"
            android:layout_marginLeft="@dimen/dimen_10"
            />
    </RelativeLayout>

    <View style="@style/line_h_black"
        android:layout_marginLeft="@dimen/dimen_15"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_white"
        android:orientation="horizontal"

        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/global_txt"
            android:layout_margin="@dimen/dimen_15"
            android:textSize="@dimen/font_main_big"
            android:layout_gravity="center"
            android:text="@string/farm_square"
            />

        <EditText
            android:id="@+id/edit_square"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/dimen_10"
            android:gravity="center|left"
            android:background="@null"
            android:hint="点击输入面积"
            android:inputType="number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/dimen_15"
            android:text="平方米"
            android:textColor="@color/global_txt"

            />
    </LinearLayout>


    <View style="@style/line_h_black"/>


    <View style="@style/line_h_black"
        android:layout_marginTop="@dimen/dimen_15"/>

    <RelativeLayout
        android:id="@+id/machine_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_clickable_item_bg"
        >

        <TextView
            android:id="@+id/machine_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/global_txt"
            android:layout_marginLeft="@dimen/dimen_15"
            android:textSize="@dimen/font_main_big"
            android:layout_centerVertical="true"
            android:text="@string/machine_type"
            />

        <ImageView
            android:id="@+id/machine_type_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/option_item_padding"
            android:layout_marginTop="@dimen/dimen_15"
            android:layout_marginBottom="@dimen/dimen_15"
            />

        <TextView
            android:id="@+id/machine_current_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/machine_type_title"
            android:layout_toLeftOf="@id/machine_type_right_arrow"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_main_normal"
            android:layout_marginLeft="@dimen/dimen_10"
            />
    </RelativeLayout>

    <View
        style="@style/line_h_black"/>

    <View style="@style/line_h_black"
        android:layout_marginTop="@dimen/dimen_15"/>

    <RelativeLayout
        android:id="@+id/start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_clickable_item_bg"
        >

        <TextView
            android:id="@+id/start_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/global_txt"
            android:layout_marginLeft="@dimen/dimen_15"
            android:textSize="@dimen/font_main_big"
            android:layout_centerVertical="true"
            android:text="@string/start_time"
            />

        <ImageView
            android:id="@+id/start_time_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/option_item_padding"
            android:layout_marginTop="@dimen/dimen_15"
            android:layout_marginBottom="@dimen/dimen_15"
            />

        <TextView
            android:id="@+id/current_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/start_time_title"
            android:layout_toLeftOf="@id/start_time_right_arrow"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_main_normal"
            android:layout_marginLeft="@dimen/dimen_10"
            />
    </RelativeLayout>

    <View style="@style/line_h_black"
        android:layout_marginLeft="@dimen/dimen_15"/>

    <RelativeLayout
        android:id="@+id/end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_clickable_item_bg"
        >

        <TextView
            android:id="@+id/end_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/global_txt"
            android:layout_marginLeft="@dimen/dimen_15"
            android:textSize="@dimen/font_main_big"
            android:layout_centerVertical="true"
            android:text="@string/end_time"
            />

        <ImageView
            android:id="@+id/end_time_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/right_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/option_item_padding"
            android:layout_marginTop="@dimen/dimen_15"
            android:layout_marginBottom="@dimen/dimen_15"
            />

        <TextView
            android:id="@+id/current_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/end_time_title"
            android:layout_toLeftOf="@id/end_time_right_arrow"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_main_normal"
            android:layout_marginLeft="@dimen/dimen_10"
            />
    </RelativeLayout>

    <View
        style="@style/line_h_black"/>


    </LinearLayout>
    </ScrollView>


</LinearLayout>