<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_contaioner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>



    <View style="@style/line_h"/>

    <RadioGroup
        android:id="@+id/tabs_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tab_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order"
            android:button="@null"
            android:drawableTop="@drawable/selector_tab_order"
            android:textColor="@drawable/selector_home_tab_font"
            android:gravity="center"
            android:textSize="@dimen/font_main_small"
            android:paddingBottom="@dimen/dimen_10"
            />
        <RadioButton
            android:id="@+id/tab_discover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discover"
            android:button="@null"
            android:drawableTop="@drawable/selector_tab_discover"
            android:textColor="@drawable/selector_home_tab_font"
            android:textSize="@dimen/font_main_small"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_10"
            />
        <RadioButton
            android:id="@+id/tab_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/message"
            android:button="@null"
            android:drawableTop="@drawable/selector_tab_message"
            android:textColor="@drawable/selector_home_tab_font"
            android:textSize="@dimen/font_main_small"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_10"
            />
        <RadioButton
            android:id="@+id/tab_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting"
            android:button="@null"
            android:drawableTop="@drawable/selector_tab_setting"
            android:textColor="@drawable/selector_home_tab_font"
            android:textSize="@dimen/font_main_small"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_10"
            />

    </RadioGroup>



    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/tab_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:checkable="true"
            android:paddingBottom="@dimen/dimen_10"
            android:paddingLeft="@dimen/dimen_25"
            android:paddingRight="@dimen/dimen_25">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/selector_tab_order"
        android:scaleType="centerInside"
        />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="订单"
                android:textSize="@dimen/font_main_small"
                android:textColor="@drawable/selector_home_tab_font"
                android:layout_gravity="center"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tab_discover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_10"
            android:paddingLeft="@dimen/dimen_25"
            android:paddingRight="@dimen/dimen_25"
            >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/selector_tab_discover"
            android:scaleType="centerInside"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="发现"
                android:layout_gravity="center"
                android:textSize="@dimen/font_main_small"
                android:textColor="@drawable/selector_home_tab_font"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/tab_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_10"
            android:paddingLeft="@dimen/dimen_25"
            android:paddingRight="@dimen/dimen_25"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/selector_tab_message"
                android:scaleType="centerInside"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="消息"
                android:layout_gravity="center"
                android:textSize="@dimen/font_main_small"
                android:textColor="@drawable/selector_home_tab_font"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/tab_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_10"
            android:paddingLeft="@dimen/dimen_25"
            android:paddingRight="@dimen/dimen_25"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/selector_tab_setting"
                android:scaleType="centerInside"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设置"
                android:layout_gravity="center"
                android:textSize="@dimen/font_main_small"
                android:textColor="@drawable/selector_home_tab_font"
                />

        </LinearLayout>



    </LinearLayout>-->


</LinearLayout>
